Fix alignment button + Add link to nav when logged

--- a/src/compass_web/sass/_elements/form-sign-in.scss
+++ b/src/compass_web/sass/_elements/form-sign-in.scss
@@ -31,7 +31,7 @@
 
 @media only screen and (max-width:768px){
 .box-extra{
-    text-align:center;
+    text-align:center!important;
     .txt, .btn{width:100%;}
     .btn{margin-top:4px; padding:10px 15px;}
 }
